--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,16 @@
 [tool.poetry]
 name = "activity-calendar-app-backend"
-version = "0.1.0"
+version = "0.0.0"
 description = ""
 authors = ["Oleksii Markhovskyi <olexiy.markhovsky@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-pycodestyle = "^2.5.0"
+sqlalchemy = "^1.3.15"
+pg8000 = "^1.14.1"
 
 [tool.poetry.dev-dependencies]
+pycodestyle = "^2.5.0"
 pytest = "^5.2"
 
 [build-system]
