--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,13 @@ description = ""
 authors = ["Oleksii Markhovskyi <olexiy.markhovsky@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
-sqlalchemy = "^1.3.15"
-pg8000 = "^1.14.1"
+python = "^3.10"
+pg8000 = "^1.23.0"
+SQLAlchemy = "^1.4.31"
 
 [tool.poetry.dev-dependencies]
-pycodestyle = "^2.5.0"
-pytest = "^5.2"
+pycodestyle = "^2.8.0"
+pytest = "^6.2.5"
 
 [build-system]
 requires = ["poetry>=0.12"]
